# replica

./: .gitignore  README.md  environment.yml  pyproject.toml  run_dev.sh  seed_data.sh
api/: settings.py  urls.py
api/fixtures/: Analysis.json  AnalysisParameter.json  AnalysisParameterValue.json  AnalysisType.json  Condition.json  DataFile.json  GSEALibrary.json  MLModel.json  Metadata.json  Project.json  ProjectAnalysisType.json  ProjectType.json  ProjectTypeAnalysisType.json  Protein.json  Result.json  User.json  Visualization.json
api/management/commands/: run_deseq2_analysis.py  run_deseq2gsea_analysis.py  run_protein_prediction.py
api/models/: __init__.py  analysis.py  analysis_parameter.py  analysis_parameter_value.py  analysis_type.py  condition.py  datafile.py  gsea_library.py  metadata.py  ml_model.py  project.py  project_analysis_type.py  project_type.py  project_type_analysis_type.py  protein.py  result.py  visualization.py
api/views/: __init__.py  analysis.py  analysis_parameter.py  analysis_parameter_value.py  analysis_type.py  auth_token.py  condition.py  data_file.py  gsea_library.py  metadata.py  ml_model.py  project.py  project_analysis_type.py  project_type.py  project_type_analysis_type.py  protein.py  result.py  serve_image.py  start_analysis.py  user.py  visualization.py
replica-client/: README.md  index.html  package-lock.json  package.json
replica-client/src/: App.css  App.jsx  index.css  main.jsx
replica-client/src/services/: analysisService.js  authService.js  modelService.js  projectService.js  userService.js
(+27 files in other folders)
